@@ -28,7 +28,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Random;
-import java.util.stream.Collectors;
 
 
 /**
@@ -438,7 +437,7 @@ public class StripedReplicaPlacer implements ReplicaPlacer {
             placements.add(rackList.place(placement.numReplicas()));
         }
         return new TopicAssignment(
-            placements.stream().map(replicas -> new PartitionAssignment(replicas, cluster)).collect(Collectors.toList())
+            placements.stream().map(replicas -> new PartitionAssignment(replicas, cluster)).toList()
         );
     }
 }
